--- a/furufuruFruit/src/main/resources/templates/mypage/seller.html
+++ b/furufuruFruit/src/main/resources/templates/mypage/seller.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>푸르푸르 푸르츠</title>
-    <link rel="stylesheet" href="inquiry.css">
+    <link rel="stylesheet" th:href="@{/mypage/inquiry.css}">
 </head>
 <body>
     <header class="header">
@@ -46,14 +46,14 @@
         <aside class="sidebar">
             <h2>상품관리</h2>
             <ul>
-                <li><a href="#">상품 문의 </a></li>
-                <li><a href="#">상품 등록 </a></li>
-                <li><a href="#">상품 조회/수정 </a></li>
+                <li><a th:href="@{/mypage/Sellmypage/inquiry}">상품 문의 </a></li>
+                <li><a th:href="@{/mypage/Sellmypage}">상품 등록 </a></li>
+                <li><a th:href="@{/mypage/Sellmypage/updatecheck}">상품 조회/수정 </a></li>
             </ul>
             <hr>
             <h2>주문/배송</h2>
             <ul>
-                <li><a href="#">주문내역</a></li>
+                <li><a th:href="@{/mypage/Sellmypage/orderdetail}">주문내역</a></li>
             </ul>
             <hr>
             <h2>내 정보 관리</h2>
