--- a/furufuruFruit/src/main/resources/templates/detail_page/detailPage.html
+++ b/furufuruFruit/src/main/resources/templates/detail_page/detailPage.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="detailPage.css">
+    <link rel="stylesheet" th:href="@{/detail_page/detailPage.css}">
 </head>
 <body>
 
 
 
 
-    <!--------------------- 헤더 -------------------------------->
+    <!-- 헤더 -->
     
     
     
@@ -21,7 +21,7 @@
 
 
 
-    <!-----------------------------메인------------------------------->
+    <!--메인-->
 
 
 
@@ -29,17 +29,19 @@
 
 
     <div id="main">
-        <img src="../x-mas_gunchimSSAK.jpg" width="500" height="750">
+        <img th:src="@{/detail_page/x-mas_gunchimSSAK.jpg}" width="500" height="750">
 
 
 
         
         <div class="mainInfor">
-            <div id="productId" style="width: 490px; font-size: x-large;">[수제케이크]솔크라서 군침이 싹도노</div>
+            <div style="width: 490px; font-size: x-large;">
+                <span th:text="${product.name}"></span>
+            </div>
             <div class="mainPrice">
                 <h2>
                     <span style="color: rgb(255, 99, 99);">9724%</span>
-                    <span>9,724원</span>
+                    <span th:text="${product.price}"></span>
                 </h2>
             </div>
             <h2>원산지: 군침왕국</h2>
@@ -69,32 +71,38 @@
             </div>
             <div class="mainInforBox">
                 <div class="rtBox">안내사항</div>
-                <div>크롱에게 이상한걸 먹일 생각에 군침이 싸악 돌 때 <br> 만들어서 이상반응이 있을 수 있습니다.</div>
+                <div>
+                    <span th:text="${product.explan}"></span>
+                </div>
             </div>
             <div class="mainInforBox">
                 <div class="rtBox">상품선택</div>
                 <div class="ltBox">
-                    <div class="itemTitle">[수제케이크]솔크라서 군침이 싹도노</div>
+                    <div class="itemTitle">
+                        <span th:text="${product.name}"></span>
+                    </div>
                     <div class="itemCount">
                         <div class="countbtn">
-
-                            <button class="minusbtn"> - </button>
-                            <div> <input type="text" style="width: 2rem;"></div>
                             <button class="plusbtn"> + </button>
-
+                            <div><input type="text" style="width: 1.5rem;" class="p_num"></div>
+                            <button class="minusbtn"> - </button>
                         </div>
-                        <div>9,724원</div>
+                        <div>
+                            <span th:text="${product.price}" class="price"></span>원
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="mainInforBox end">
-                <span>총 상품금액:</span>
-                <span class="totalPrice">9,724원</span>
+                <span>총 상품금액: </span>
+                <span class="totalPrice"></span>
+                <span>원</span>
             </div>
             <div class="mainInforBox between">
-                <button style="width: 50px; height: 50px;"class="wishbtn">♡</button>
-                <button style="width: 400px; height: 50px;" class="cartbtn">장바구니 담기</button>
+                <button class="wishbtn" onclick="toggleAct(this)">♥</button>
+                <a th:href="@{|/cart/{cartId}/{productId}|}"><div class="cartbtn">장바구니 담기</div></a>
             </div>
+
         </div>
     </div>
 
@@ -102,19 +110,19 @@
 
 
 
-
-    <!-----------------------------상품 정보--------------------------------->
+    <!--상품 정보-->
 
     <div id="infor">
+        <p><span th:text="${product.explan}"></span></p>
         <p>매년 반복되는 크리스마스 <br> 예수님 생일에 지들이 뭐라고 커플들은 난리치는지</p>
-        <img src="../airportThief.jpg" alt="">
+        <img th:src="@{/detail_page/airportThief.jpg}" alt="">
         <p style="color: rgb(184, 17, 17);">예예예 예수님 생일이 언제부터 니들 파티날이 되, 되었는데,~ </p>
         <br>
         <br>
         <br>
         <br>
         <p>커플? 크리스마스에 사람들한테 치여서 별로임ㅋㅋ</p>
-        <img src="../justclowns.jpeg" alt="">
+        <img th:src="@{/detail_page/justclowns.jpeg}" alt="">
         <p style="color: rgb(184, 17, 17);">응~ 안 사귀면 그만이야~</p>
         <br><br><br><br><br>
         <p>정신 승리라고 느껴질 때 먹으면 좋은 케이크!</p>
@@ -126,7 +134,7 @@
 
 
 
-    <!-----------------------------상품고시정보 테이블------------------------------------>
+    <!-- 상품고시정보 테이블 -->
 
 
     <div id="detail">
@@ -155,7 +163,7 @@
             <li class="rtlist">소비자 안전을 위한 주의사항 (｢식품 등의 표시ㆍ광고에 관한 법률 시행규칙｣ 제5조 및 [별표 2]에 따른 표시사항을 말함)</li>
             <li class="ltlist">상품설명 및 상품이미지 참조</li>
             <li class="rtlist">소비자 상담 관련 전화번호</li>
-            <li class="ltlist">컬리고객행복센터 (1644-1107)</li>
+            <li class="ltlist">과일부락리고객센터 (1644-1107)</li>
         </ul>
     </div>
 
@@ -164,7 +172,7 @@
 
 
 
-    <!----------------------------후기------------------------------------->
+    <!--후기-->
 
 
 
@@ -173,13 +181,15 @@
         <div class="reviewTitle">상품 후기</div>
         <div class="reviewbox top">
             <div class="review">군**</div>
-            <h3 class="review">[수제케이크]솔크라서 군침이 싹도노</h3>
+            <h3 class="review">
+                <span th:text="${product.name}"></span>
+            </h3>
             <p class="css-y49dcn e36z05c13">
                 같이 시킨 마카롱도 군침 싸악 도네요. 메리 솔크
             </p>
             <div class="css-la25nj e36z05c2">
                 <button class="css-p5degw e36z05c10">
-                    <img alt="리뷰 이미지 썸네일" src="../gunchimMacarong.jpg" width="240" height="240">
+                    <img alt="리뷰 이미지 썸네일" th:src="@{/detail_page/gunchimMacarong.jpg}" width="240" height="240">
                     <noscript></noscript>
                 </button>
             </div>
@@ -189,15 +199,17 @@
                 </div>
             </footer>
         </div>
-        <div class="reviewbox">
+        <div class="reviewbox top">
             <div class="review">군**</div>
-            <h3 class="review">[수제케이크]솔크라서 군침이 싹도노</h3>
+            <h3 class="review">
+                <span th:text="${product.name}"></span>
+            </h3>
             <p class="css-y49dcn e36z05c13">
                 같이 시킨 마카롱도 군침 싸악 도네요. 메리 솔크
             </p>
             <div class="css-la25nj e36z05c2">
                 <button class="css-p5degw e36z05c10">
-                    <img alt="리뷰 이미지 썸네일" src="../gunchimMacarong.jpg" width="240" height="240">
+                    <img alt="리뷰 이미지 썸네일" th:src="@{/detail_page/gunchimMacarong.jpg}" width="240" height="240">
                     <noscript></noscript>
                 </button>
             </div>
@@ -207,15 +219,17 @@
                 </div>
             </footer>
         </div>
-        <div class="reviewbox">
+        <div class="reviewbox top">
             <div class="review">군**</div>
-            <h3 class="review">[수제케이크]솔크라서 군침이 싹도노</h3>
+            <h3 class="review">
+                <span th:text="${product.name}"></span>
+            </h3>
             <p class="css-y49dcn e36z05c13">
                 같이 시킨 마카롱도 군침 싸악 도네요. 메리 솔크
             </p>
             <div class="css-la25nj e36z05c2">
                 <button class="css-p5degw e36z05c10">
-                    <img alt="리뷰 이미지 썸네일" src="../gunchimMacarong.jpg" width="240" height="240">
+                    <img alt="리뷰 이미지 썸네일" th:src="@{/detail_page/gunchimMacarong.jpg}" width="240" height="240">
                     <noscript></noscript>
                 </button>
             </div>
@@ -225,15 +239,17 @@
                 </div>
             </footer>
         </div>
-        <div class="reviewbox">
+        <div class="reviewbox top">
             <div class="review">군**</div>
-            <h3 class="review">[수제케이크]솔크라서 군침이 싹도노</h3>
-            <p>
+            <h3 class="review">
+                <span th:text="${product.name}"></span>
+            </h3>
+            <p class="css-y49dcn e36z05c13">
                 같이 시킨 마카롱도 군침 싸악 도네요. 메리 솔크
             </p>
-            <div>
+            <div class="css-la25nj e36z05c2">
                 <button class="css-p5degw e36z05c10">
-                    <img alt="리뷰 이미지 썸네일" src="../gunchimMacarong.jpg" width="240" height="240">
+                    <img alt="리뷰 이미지 썸네일" th:src="@{/detail_page/gunchimMacarong.jpg}" width="240" height="240">
                     <noscript></noscript>
                 </button>
             </div>
@@ -243,15 +259,117 @@
                 </div>
             </footer>
         </div>
-        <div class="reviewbox">
+        <div class="reviewbox top">
             <div class="review">군**</div>
-            <h3 class="review">[수제케이크]솔크라서 군침이 싹도노</h3>
+            <h3 class="review">
+                <span th:text="${product.name}"></span>
+            </h3>
             <p class="css-y49dcn e36z05c13">
                 같이 시킨 마카롱도 군침 싸악 도네요. 메리 솔크
             </p>
             <div class="css-la25nj e36z05c2">
                 <button class="css-p5degw e36z05c10">
-                    <img alt="리뷰 이미지 썸네일" src="../gunchimMacarong.jpg" width="240" height="240">
+                    <img alt="리뷰 이미지 썸네일" th:src="@{/detail_page/gunchimMacarong.jpg}" width="240" height="240">
+                    <noscript></noscript>
+                </button>
+            </div>
+            <footer class="css-1fkegtf e36z05c1">
+                <div>
+                    <span class="css-14kcwq8 e36z05c0">2024.08.25</span>
+                </div>
+            </footer>
+        </div>
+        <div class="reviewbox top">
+            <div class="review">군**</div>
+            <h3 class="review">
+                <span th:text="${product.name}"></span>
+            </h3>
+            <p class="css-y49dcn e36z05c13">
+                같이 시킨 마카롱도 군침 싸악 도네요. 메리 솔크
+            </p>
+            <div class="css-la25nj e36z05c2">
+                <button class="css-p5degw e36z05c10">
+                    <img alt="리뷰 이미지 썸네일" th:src="@{/detail_page/gunchimMacarong.jpg}" width="240" height="240">
+                    <noscript></noscript>
+                </button>
+            </div>
+            <footer class="css-1fkegtf e36z05c1">
+                <div>
+                    <span class="css-14kcwq8 e36z05c0">2024.08.25</span>
+                </div>
+            </footer>
+        </div>
+        <div class="reviewbox top">
+            <div class="review">군**</div>
+            <h3 class="review">
+                <span th:text="${product.name}"></span>
+            </h3>
+            <p class="css-y49dcn e36z05c13">
+                같이 시킨 마카롱도 군침 싸악 도네요. 메리 솔크
+            </p>
+            <div class="css-la25nj e36z05c2">
+                <button class="css-p5degw e36z05c10">
+                    <img alt="리뷰 이미지 썸네일" th:src="@{/detail_page/gunchimMacarong.jpg}" width="240" height="240">
+                    <noscript></noscript>
+                </button>
+            </div>
+            <footer class="css-1fkegtf e36z05c1">
+                <div>
+                    <span class="css-14kcwq8 e36z05c0">2024.08.25</span>
+                </div>
+            </footer>
+        </div>
+        <div class="reviewbox top">
+            <div class="review">군**</div>
+            <h3 class="review">
+                <span th:text="${product.name}"></span>
+            </h3>
+            <p class="css-y49dcn e36z05c13">
+                같이 시킨 마카롱도 군침 싸악 도네요. 메리 솔크
+            </p>
+            <div class="css-la25nj e36z05c2">
+                <button class="css-p5degw e36z05c10">
+                    <img alt="리뷰 이미지 썸네일" th:src="@{/detail_page/gunchimMacarong.jpg}" width="240" height="240">
+                    <noscript></noscript>
+                </button>
+            </div>
+            <footer class="css-1fkegtf e36z05c1">
+                <div>
+                    <span class="css-14kcwq8 e36z05c0">2024.08.25</span>
+                </div>
+            </footer>
+        </div>
+        <div class="reviewbox top">
+            <div class="review">군**</div>
+            <h3 class="review">
+                <span th:text="${product.name}"></span>
+            </h3>
+            <p class="css-y49dcn e36z05c13">
+                같이 시킨 마카롱도 군침 싸악 도네요. 메리 솔크
+            </p>
+            <div class="css-la25nj e36z05c2">
+                <button class="css-p5degw e36z05c10">
+                    <img alt="리뷰 이미지 썸네일" th:src="@{/detail_page/gunchimMacarong.jpg}" width="240" height="240">
+                    <noscript></noscript>
+                </button>
+            </div>
+            <footer class="css-1fkegtf e36z05c1">
+                <div>
+                    <span class="css-14kcwq8 e36z05c0">2024.08.25</span>
+                </div>
+            </footer>
+        </div>
+        <div class="reviewbox top">
+            <div class="review">군**</div>
+            <h3 class="review">
+                <span th:text="${product.name}"></span>
+            </h3>
+            <p class="css-y49dcn e36z05c13">
+                같이 시킨 마카롱도 군침 싸악 도네요. 메리 솔크
+            </p>
+            <div class="css-la25nj e36z05c2">
+                <button class="css-p5degw e36z05c10">
+                    <img alt="리뷰 이미지 썸네일" th:src="@{/detail_page/gunchimMacarong.jpg}" width="240" height="240">
                     <noscript></noscript>
                 </button>
             </div>
@@ -262,8 +380,8 @@
             </footer>
         </div>
         <div class="btn">
-            <button class="prevbtn"><</button>
-            <button class="nextbtn">></button>
+            <button class="prevbtn"> < </button>
+            <button class="nextbtn"> > </button>
         </div>
     </div>
 
@@ -274,7 +392,7 @@
 
 
 
-    <!---------------------------------문의----------------------------------->
+    <!--문의-->
     
     
     
@@ -282,7 +400,7 @@
     <div id="QnA">
         <h3>문의하기</h3>
         <li>상품에 대한 문의를 남기는 공간입니다. 해당 게시판의 성격과 다른 글은 사전동의 없이 담당 게시판으로 이동될 수 있습니다.</li>
-        <li>배송관련, 주문(취소/교환/환불)관련 문의 및 요청사항은 <a href="">1:1 문의</a>에 남겨주세요</li>
+        <li>배송관련, 주문(취소/교환/환불)관련 문의 및 요청사항은 <a th:href="@{/csc/inquiry}">1:1 문의</a>에 남겨주세요</li>
         <br>
         <table>
             <th style="width: 850px;">제목</th>
@@ -357,8 +475,8 @@
             </tr><!--행 끝10-->
         </table>
         <div class="btn">
-            <button class="prevbtn"><</button>
-            <button class="nextbtn">></button>
+            <button class="prevbtn"> < </button>
+            <button class="nextbtn"> > </button>
         </div>
         
     </div>
@@ -371,7 +489,7 @@
 
 
 
-    <!-------------------------------풋터--------------------------------------------->
+    <!--풋터-->
 
 
     <div id="footer">footer</div>
@@ -384,7 +502,7 @@
 
 
 
-
+    <script th:src="@{/detail_page/detailPage.js}"></script>
 
 </body>
 </html>
