--- a/furufuruFruit/src/main/resources/templates/mypage/productinquiry.html
+++ b/furufuruFruit/src/main/resources/templates/mypage/productinquiry.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>푸릇푸릇 푸르츠</title>
-    <link rel="stylesheet" href="productinquiry.css">
+    <link rel="stylesheet" th:href="@{productinquiry.css}">
 </head>
 <body>
     <header class="header">
