--- a/furufuruFruit/src/main/resources/templates/category/category.html
+++ b/furufuruFruit/src/main/resources/templates/category/category.html
@@ -1,6 +1,7 @@
 <html layout:decorate="~{layout/layout}">
 <div layout:fragment="content">
 <style>
+
         *{
             margin: 0;
             padding: 0;
@@ -19,7 +20,7 @@
           width: 500px;
           height: 100px;
           position: relative;
-          left: 50px;
+          left: 450px;
 
             }
 
@@ -44,32 +45,34 @@
         <div>
             
               <p>
-                <br><h2>씁쓸한 떫음, 아삭 채소들!</h2>
+                <br><h2>씁쓸한 떫음, 과일부락리!</h2>
               </p>
               <div class="goods-layout">
 
                 <div class="row row-cols-1 row-cols-md-4 g-4">
                   
-                 <div class="col">
-                 <div class="col" th:each="{question : ${paging}}"}>
+                <div class="col" th:each="product : ${productList}">
                     <div class="card" style="cursor: pointer;" onclick="location.href='#';">
-                      <img src="망고.jpg" class="card-img-top" alt="...">
+                      <img th:src="${product.path}" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">
-                          [델몬트][무친당도] <br>
-                          육즙줄줄&nbsp;달콤&nbsp;망고
+                        <h5 class="card-title" th:text="'[상품명] '+${product.name}">
                         </h5>
-                        <p class="card-text">
-                          50.000원
+                        <p class="card-text" th:text="${product.price} + '원'">
+                        </p>
+                        <p th:text="${product.explan}">
                         </p>
                       </div>
                     </div>
-                  </div>
+                 </div>
+                  
+                  
                   
                
             
         </div>
-    </div>    
+    </div>
     
-    
+     
+       
+</div>     
 </html>    
