--- a/furufuruFruit/src/main/resources/static/detail_page/detailPage.css
+++ b/furufuruFruit/src/main/resources/static/detail_page/detailPage.css
@@ -107,16 +107,43 @@ img{
     color: aliceblue;
     width: 50px;
     height: 50px;
+    cursor: pointer;
 }
 
 .cartbtn{
     width: 400px; 
     height: 50px;
     background-color: RGB(255,192,0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: aliceblue;
 }
 
 
+/*민지가 준 코드*/
+/* .button {
+    text-align: center;
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-evenly;
+}
 
+.lecBtn {
+    display: inline-block;
+    background-color: #c2a2b4;
+    color:white;
+    padding: 15px 50px;
+    border-radius: 50px;
+    cursor: pointer;
+    margin-bottom: 25px;
+    transition: 0.3s;
+}
+
+.lecBtn:hover {
+    background-color: #608fb7;
+    transform: translateY(-3px);
+} */
 
 
 
