--- a/furufuruFruit/src/main/resources/templates/payment/payment.html
+++ b/furufuruFruit/src/main/resources/templates/payment/payment.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="payment.css">
-</head>
-<body>
-    <div id="header"></div>
+<!--이순-->
+<html layout:decorate="~{layout/layout}">
+<div layout:fragment="content" class="container my-3">
+    
+    <link rel="stylesheet" th:href="@{/payment/payment.css}">
+
     <div id="main">
         <h2 class="orderList">주문서</h2>
         <div>
@@ -87,11 +83,12 @@
                     <div class="policy agree">위 내용을 확인 하였으며 결제에 동의합니다.</div>
                 </div>
                 <div  class="paymentbtn">
-                    <button style="background-color: RGB(255,192,0);">결제하기</button>
+                    <button style="background-color: RGB(255,192,0);" class="cardslash">결제하기</button>
                 </div>
             </div>
         </div>
     </div>
-    <div id="footer"></div>
-</body>
+
+    <script th:src="@{|payment/payment.js|}"></script>
+</div>
 </html>
