2024 -09 - 10 6차 병합 남동현

--- a/furufuruFruit/src/main/resources/templates/mypage/seleuser_productregist.html
+++ b/furufuruFruit/src/main/resources/templates/mypage/seleuser_productregist.html
@@ -68,7 +68,6 @@
             <h3>상품 등록</h3>
             <div class="line"></div>
             <div id="content-itemBox">
-             <form id="product-form" action="/products" method="post" enctype="multipart/form-data">
                 <div class="content-item">
                     <h4>상품명</h4>
                     <input type="text" id="product-name" placeholder="상품명 입력">
@@ -105,6 +104,7 @@
                     <h4>상세설명</h4>
                     <textarea name="" id="product-explan" placeholder="상품의 상세설명을 입력해주세요."></textarea>
                 </div>
+                <button type="submit">상품 등록</button>
             </div>
         </main>        
     </div>
