--- a/furufuruFruit/src/main/resources/templates/admin/admin_main.html
+++ b/furufuruFruit/src/main/resources/templates/admin/admin_main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/bc8b36da76.js" crossorigin="anonymous"></script>
+    <script th:src="@{https://kit.fontawesome.com/bc8b36da76.js}" crossorigin="anonymous"></script>
     <title>Document</title>
     <style>  
         *{
