0910 Update file(marge)

--- a/furufuruFruit/src/main/resources/static/signup/signup.css
+++ b/furufuruFruit/src/main/resources/static/signup/signup.css
@@ -194,3 +194,14 @@ select.box {
     color: rgb(255,192,0);
     cursor: pointer;
 }
+
+#errors{
+    width: 300px;
+    height: 50px;
+    border-radius: 5px;
+    border: 1px solid rgb(255,192,0);
+    color: rgb(255,192,0);
+    background-color: white;
+    margin-bottom: 20px;
+    line-height: 50px;
+}
