--- a/furufuruFruit/src/main/resources/templates/mypage/seleuser_productregist.html
+++ b/furufuruFruit/src/main/resources/templates/mypage/seleuser_productregist.html
@@ -68,43 +68,49 @@
             <h3>상품 등록</h3>
             <div class="line"></div>
             <div id="content-itemBox">
-             <form id="product-form" action="/products" method="post" enctype="multipart/form-data">
+             <form id="product-form" th:action="@{/mypage/Sellmypage}" th:object="${productCreateForm}"  method="post" enctype="multipart/form-data">
+                <div id="erorrs" th:replace="~{login/form_errors :: formErrorsFragment}"></div>
                 <div class="content-item">
                     <h4>상품명</h4>
-                    <input type="text" id="product-name" placeholder="상품명 입력">
+                    <input type="text" id="product-name" placeholder="상품명 입력" th:field="*{name}">
                 </div>
                 <div class="content-item">
                     <h4>상품 카테고리</h4>
-                    <select name="product-category" id="product-category">
-                        <option>카테고리 선택</option>
-                        <option value="">과일</option>
-                        <option value="">채소</option>
-                        <option value="">생선</option>
-                        <option value="">쌀/ 잡곡</option>
-                        <option value="">우유</option>
-                        <option value="">김치</option>
-                        <option value="">홍삼</option>
-                        <option value="">전통주</option>
-                        <option value="">밀키트</option>
-                        <option value="">가공식품</option>
+                    <select name="product-category" id="product-category" th:field="*{category}">
+                        <option value="type">카테고리 선택</option>
+                        <option value="과일">과일</option>
+                        <option value="채소">채소</option>
+                        <option value="생선">생선</option>
+                        <option value="쌀/ 잡곡">쌀/ 잡곡</option>
+                        <option value="우유">우유</option>
+                        <option value="김치">김치</option>
+                        <option value="홍삼">홍삼</option>
+                        <option value="전통주">전통주</option>
+                        <option value="밀키트">밀키트</option>
+                        <option value="가공식품">가공식품</option>
                     </select>
                 </div>
                 <div class="content-item">
                     <h4>가격</h4>
-                    <input type="text" id="product-price" placeholder="가격 입력">
+                    <input type="text" id="product-price" placeholder="가격 입력" th:field="*{price}">
                 </div>
                 <div class="content-item">
                     <h4>수량</h4>
-                    <input type="text" id="product-amount" placeholder="수량 입력">
+                    <input type="text" id="product-amount" placeholder="수량 입력" th:field="*{amount}">
                 </div>
                 <div class="content-item">
                     <h4>상품 이미지</h4>
-                    <input type="file" id="product-imgfile">
+                    <input type="file" id="product-imgfile" th:field="*{path}">
                 </div>
                 <div class="content-item">
                     <h4>상세설명</h4>
-                    <textarea name="" id="product-explan" placeholder="상품의 상세설명을 입력해주세요."></textarea>
+                    <textarea name="" id="product-explan" placeholder="상품의 상세설명을 입력해주세요."
+                    th:field="*{explan}"></textarea>
                 </div>
+                <div>
+                    <button type="submit">등록하기</button>
+                </div>
+             </form>
             </div>
         </main>        
     </div>
